# pokerpulsepro-tauri

./: .gitignore  README.md  generate-icon.js  generate-icons.js  generate-installer-images.js  icon-generator.html  index.html  package-lock.json  package.json  projector.html  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
src/: App.test.tsx  App.tsx  api.ts  index.css  projector.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Blinds.tsx  Header.tsx  Help.tsx  Modal.tsx  Navigation.tsx  Onboarding.test.tsx  Onboarding.tsx  Players.tsx  Prizes.test.tsx  Prizes.tsx  ProjectorView.tsx  ReseatBanner.tsx  Settings.test.tsx  Settings.tsx  Timer.tsx
src/i18n/: index.ts
src/i18n/locales/: de.json  en.json  es.json  fr.json  is.json  pt.json
src/test/: Blinds.test.tsx  Header.test.tsx  Help.test.tsx  Modal.test.tsx  Navigation.test.tsx  Players.test.tsx  ProjectorView.test.tsx  ReseatBanner.test.tsx  Timer.test.tsx  api.test.ts  i18n.test.ts  multiTable.test.ts  persistence.test.ts  setup.ts  tournament.test.ts  types.test.ts  utils.test.ts
